# Genom-Protein-interactions

./: CMakeLists.txt  Doxyfile  README.md
src/: Matrix.cpp  Matrix.hpp  askBaseProb.cpp  askBaseProb.hpp  askBaseProb.ui  genom-2.pro  genomic_coordinates.cpp  genomic_coordinates.hpp  logo.hpp  main.cpp  mainQt.cpp  matrixFromSequence.cpp  matrixFromSequence.hpp  matrixFromSequence.ui  procedures.cpp  procedures.hpp  qt.sh  resultsWindow.cpp  resultsWindow.hpp  resultsWindow.ui  sequenceFromMatrix.cpp  sequenceFromMatrix.hpp  sequenceFromMatrix.ui  user_interaction.cpp  user_interaction.hpp  user_interactionQt.cpp  utility.cpp  utility.hpp  window.cpp  window.hpp  window.ui
test/: DBP_PPM.mat  gTest.cpp  promoters.fasta
